@@ -264,6 +264,8 @@ Tests
 Build
 -----
 
+- Issue #14018: Fix OS X Tcl/Tk framework checking when using OS X SDKs.
+
 - Issue #15431: Add _freeze_importlib project to regenerate importlib.h
   on Windows. Patch by Kristján Valur Jónsson.
 
